[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["LaKeisha Turner <lakeisha.turner@slalom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-flask = "^1.3.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=flask-app --cov-report=html --cov-report=lcov --cov-report=json --verbose"
